# quantforge-engine

./: README.md  conanfile.txt
config/: engine.yaml
config/strategies/: momentum_v2.yaml
cpp/: CMakeLists.txt  conanfile.txt
cpp/common/: arena_allocator.hpp  disruptor.hpp  logger.hpp  spsc_queue.hpp  thread_utils.hpp  types.hpp
cpp/ems/: ems.cpp  ems.hpp
cpp/main/: main.cpp
cpp/market_data/: candle_builder.hpp  tick_normalizer.cpp  tick_normalizer.hpp  upstox_ws_handler.cpp  upstox_ws_handler.hpp
cpp/oms/: fill_deduplicator.hpp  oms.cpp  oms.hpp  order_pool.hpp  order_state.hpp
cpp/portfolio/: portfolio_engine.cpp  portfolio_engine.hpp
cpp/proto/: download_and_complie.sh
cpp/risk/: pre_trade_risk.cpp  pre_trade_risk.hpp  token_bucket.hpp
cpp/strategy/: strategy_interface.hpp  strategy_manager.cpp  strategy_manager.hpp
cpp/strategy/plugins/: momentum_strategy.cpp  momentum_strategy.hpp
cpp/transport/: kafka_publisher.cpp  kafka_publisher.hpp  redis_client.cpp  redis_client.hpp  upstox_rest_client.cpp  upstox_rest_client.hpp
docs/: 01_high_level_architecture.md  02_low_level_design.md
infra/alertmanager/: alertmanager.yml
infra/clickhouse/: config.xml  init.sql
infra/docker/: Dockerfile.cpp  Dockerfile.python  docker-compose.yml
infra/grafana/dashboards/: dashboard.yaml  trading.json
infra/grafana/datasources/: datasources.yaml
infra/k8s/: engine-deployment.yaml
infra/loki/: loki-config.yaml
infra/prometheus/: prometheus.yml
proto/: qauntforge.proto
scripts/: build_cpp.sh
